offlineimap (3.0.3) unstable; urgency=low

  * No longer throws an exception when updating messages with strange
    Date headers; will just set IMAP Internaldate to the current date.
    Closes: #153425.
  * No longer doubles-up reference names for mailboxes.  Closes: #153515.

 -- John Goerzen <jgoerzen@complete.org>  Thu, 18 Jul 2002 17:46:13 -0500

offlineimap (3.0.2) unstable; urgency=low

  * Fixed mailbox name recorder to use localfolder.getvisiblename() rather
    than remotefolder.getvisiblename()
  * Fixed remotepassfile option.  Closes: #153119.  Used 1-line patch from
    Tommi Virtanen.
  * Now handles cases of not being able to get UID for an uploaded message
    more gracefully.  This could occur if the server doesn't support
    SEARCH, can't find the message ID, or finds multiple message IDs.
    Closes: #153241.
  * Now source is in Subversion.  Make version.py log the Subversion
    revision number.

 -- John Goerzen <jgoerzen@complete.org>  Wed, 15 Jul 2002 06:43:36 -0500

offlineimap (3.0.1) unstable; urgency=low

  * Detabified the source.
  * Added UI list to the manpage.
  * Added -o (run only once) option with patch sent in by Martijn Pieters.
  * Optimized folder/IMAP.py addmessagesflags() with new listjoin() in
    imaputil.  Now, send the server 1:5,7 instead of 1,2,3,4,5,7.
  * Made folder/Maildir.py/deletemessage() more tolerant if a message
    asked to be deleted already has been.
  * In Base.py/copymessageto(), no longer bother calling getmessage()
    unless a folder's storemessages() returns true.  This will also help
    with syncing to LocalStatus if the user deleted messages in the
    Maildir since the cachemessagelist() was called.

 -- John Goerzen <jgoerzen@complete.org>  Fri, 12 Jul 2002 07:28:24 -0500

offlineimap (3.0.0) unstable; urgency=low

  * Introduced a new graphical user interface written with Tkinter.
    It features a nice view of multi-threaded displays.