@@ -1,7 +1,3 @@
-* Configurator UI.
-  Est time: n/a
-  Worked on by: Martijn Pieters <mj@zope.com>
-
 * Add an option to handle the network exception that results if a connection
   to the IMAP server fails, or there is another socket error.
 
@@ -20,7 +16,5 @@
 
 * Add new UI modules designed for noninteractive, cronned operation.
   Est time: 30 minutes
-
-* Ability to check SSL sync.
 
 * New IMAP library.
