@@ -25,7 +25,7 @@
 
 <hr>
 <!-- Creator     : groff version 1.17.2 -->
-<!-- CreationDate: Wed Jul 17 15:12:19 2002 -->
+<!-- CreationDate: Fri Jul 19 22:34:59 2002 -->
 <a name="NAME"></a>
 <h2>NAME</h2>
 <table width="100%" border=0 rules="none" frame="void"
@@ -920,8 +920,10 @@ offlineimap@complete.org.</td></table>
        cols="2" cellspacing="0" cellpadding="0">
 <tr valign="top" align="left">
 <td width="10%"></td><td width="90%">
-Should be reported to the author at the address specified
-below.</td></table>
+Reports of bugs should be sent via e-mail to the
+<b>OfflineIMAP</b> bug-tracking system (BTS) at
+offlineimap@bugs.complete.org or submitted on-line using the
+Web interface at http://bugs.complete.org/.</td></table>
 <a name="COPYRIGHT"></a>
 <h2>COPYRIGHT</h2>
 
