@@ -1,6 +1,6 @@
 %!PS-Adobe-3.0
 %%Creator: groff version 1.17.2
-%%CreationDate: Wed Jul 17 15:12:18 2002
+%%CreationDate: Fri Jul 19 22:34:55 2002
 %%DocumentNeededResources: font Times-Roman
 %%+ font Times-Bold
 %%+ font Times-Italic
@@ -682,22 +682,26 @@ G .64(hen, on your ne)-5.64 F .64(xt sync, the message will be re-do)
 (xt "Subscribe" in the subject of a mail to of)-.15 F
 (\215ineimap-request@complete.or)-.25 E 3.348(g. T)-.18 F(o)-.8 E
 (post, send the message to of)108 576 Q(\215ineimap@complete.or)-.25 E
-(g.)-.18 E F1 -.11(BU)72 592.8 S(GS).11 E F0
-(Should be reported to the author at the address speci\214ed belo)108
-604.8 Q -.65(w.)-.25 G F1(COPYRIGHT)72 621.6 Q F0(Of)108 633.6 Q
-(\215ineIMAP is Cop)-.25 E(yright \(C\) 2002 John Goerzen.)-.1 E .287
-(This program is free softw)108 650.4 R .287(are; you can redistrib)-.1
-F .286(ute it and/or modify it under the terms of the GNU General)-.2 F
-.766(Public License as published by the Free Softw)108 662.4 R .766
-(are F)-.1 F .766(oundation; either v)-.15 F .766
-(ersion 2 of the License, or \(at your)-.15 F(option\) an)108 674.4 Q
-2.5(yl)-.15 G(ater v)-2.5 E(ersion.)-.15 E .58(This program is distrib)
-108 691.2 R .579(uted in the hope that it will be useful, b)-.2 F .579
-(ut WITHOUT ANY W)-.2 F(ARRANTY)-1.2 E 3.079(;w)-.92 G(ithout)-3.079 E
--2.15 -.25(ev e)108 703.2 T 2.729(nt).25 G .229(he implied w)-2.729 F
-.229(arranty of MERCHANT)-.1 F .229(ABILITY or FITNESS FOR A P)-.93 F
-(AR)-.92 E .23(TICULAR PURPOSE.)-.6 F(See)5.23 E
-(the GNU General Public License for more details.)108 715.2 Q
+(g.)-.18 E F1 -.11(BU)72 592.8 S(GS).11 E F0 4.42(Reports of b)108 604.8
+R 4.419(ugs should be sent via e-mail to the)-.2 F F2(Of\215ineIMAP)
+6.919 E F0 -.2(bu)6.919 G 4.419(g-tracking system \(BTS\) at).2 F(of)108
+616.8 Q(\215ineimap@b)-.25 E(ugs.complete.or)-.2 E 2.5(go)-.18 G 2.5(rs)
+-2.5 G(ubmitted on-line using the W)-2.5 E(eb interf)-.8 E
+(ace at http://b)-.1 E(ugs.complete.or)-.2 E(g/.)-.18 E F1(COPYRIGHT)72
+633.6 Q F0(Of)108 645.6 Q(\215ineIMAP is Cop)-.25 E
+(yright \(C\) 2002 John Goerzen.)-.1 E .286(This program is free softw)
+108 662.4 R .286(are; you can redistrib)-.1 F .287
+(ute it and/or modify it under the terms of the GNU General)-.2 F .766
+(Public License as published by the Free Softw)108 674.4 R .766(are F)
+-.1 F .766(oundation; either v)-.15 F .766
+(ersion 2 of the License, or \(at your)-.15 F(option\) an)108 686.4 Q
+2.5(yl)-.15 G(ater v)-2.5 E(ersion.)-.15 E .579(This program is distrib)
+108 703.2 R .579(uted in the hope that it will be useful, b)-.2 F .58
+(ut WITHOUT ANY W)-.2 F(ARRANTY)-1.2 E 3.08(;w)-.92 G(ithout)-3.08 E
+-2.15 -.25(ev e)108 715.2 T 2.73(nt).25 G .23(he implied w)-2.73 F .229
+(arranty of MERCHANT)-.1 F .229(ABILITY or FITNESS FOR A P)-.93 F(AR)
+-.92 E .229(TICULAR PURPOSE.)-.6 F(See)5.229 E
+(the GNU General Public License for more details.)108 727.2 Q
 (John Goerzen)72 768 Q(July 12, 2002)151.655 E(5)201.915 E EP
 %%Page: 6 6
 %%BeginPageSetup
@@ -713,20 +717,20 @@ BP
 (Boston, MA)108 148.8 Q(02111-1307)5 E(USA)108 160.8 Q/F1 10.95
 /Times-Bold@0 SF -.548(AU)72 177.6 S(THOR).548 E/F2 10/Times-Bold@0 SF
 (Of\215ineIMAP)108 189.6 Q(,)-.92 E F0 .488
-(its libraries, documentation, and all included \214les, e)2.987 F .488
-(xcept where noted, w)-.15 F .488(as written by John)-.1 F
+(its libraries, documentation, and all included \214les, e)2.988 F .488
+(xcept where noted, w)-.15 F .487(as written by John)-.1 F
 (Goerzen <jgoerzen@complete.or)108 201.6 Q(g> and cop)-.18 E
 (yright is held as stated in the COPYRIGHT section.)-.1 E(Of)108 218.4 Q
 (\215ineIMAP may be do)-.25 E(wnloaded, and information found, from its\
  homepage via either Gopher or HTTP:)-.25 E(gopher://quux.or)108 235.2 Q
 (g/1/de)-.18 E -.15(ve)-.25 G(l/of).15 E(\215ineimap)-.25 E
 (http://quux.or)108 247.2 Q(g/de)-.18 E -.15(ve)-.25 G(l/of).15 E
-(\215ineimap)-.25 E(Of)108 264 Q 2.529(\215ineIMAP may also be do)-.25 F
+(\215ineimap)-.25 E(Of)108 264 Q 2.528(\215ineIMAP may also be do)-.25 F
 2.528(wnloaded using Sub)-.25 F -.15(ve)-.15 G 5.028
-(rsion. Additionally).15 F 5.028(,t)-.65 G 2.528(he distrib)-5.028 F
-2.528(uted tar)-.2 F 2.528(.gz may be)-.55 F .717
+(rsion. Additionally).15 F 5.028(,t)-.65 G 2.529(he distrib)-5.028 F
+2.529(uted tar)-.2 F 2.529(.gz may be)-.55 F .718
 (updated with a simple "svn update" command; it is ready to go.)108 276
-R -.15(Fo)5.718 G 3.218(ri).15 G .718(nformation on getting Of)-3.218 F
+R -.15(Fo)5.717 G 3.217(ri).15 G .717(nformation on getting Of)-3.217 F
 (\215ineIMAP)-.25 E(with Sub)108 288 Q -.15(ve)-.15 G
 (rsion, please visit:).15 E(http://svn.complete.or)108 304.8 Q(g/)-.18 E
 F1(SEE ALSO)72 321.6 Q F2(mutt)108 333.6 Q F0(\(1\),)A F2(python)2.5 E
