@@ -522,7 +522,16 @@ To subscribe, send the text "Subscribe" in the subject of a mail to
 offlineimap-request@complete.org.  To post, send the message to
 offlineimap@complete.org.
 .SH BUGS
-Should be reported to the author at the address specified below.
+Reports of bugs should be sent via e-mail to the
+.B OfflineIMAP
+bug-tracking system (BTS) at
+.UR mailto:offlineimap@bugs.complete.org
+offlineimap@bugs.complete.org
+.UE
+or submitted on-line using the Web interface at
+.UR http://bugs.complete.org/
+http://bugs.complete.org/.
+.UE
 .SH COPYRIGHT
 OfflineIMAP is Copyright (C) 2002 John Goerzen.
 .PP
