@@ -4,6 +4,7 @@ offlineimap (3.0.3) unstable; urgency=low
     Date headers; will just set IMAP Internaldate to the current date.
     Closes: #153425.
   * No longer doubles-up reference names for mailboxes.  Closes: #153515.
+  * Noted new bug-tracking system in manual and rebuilt manual files.
 
  -- John Goerzen <jgoerzen@complete.org>  Thu, 18 Jul 2002 17:46:13 -0500
 
